[package]
name = "dspm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.4", features = ["derive"] }
dirs = "5.0.1"
openssl = "0.10.54"
rpassword = "7.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97", features = ["preserve_order"] }
